--- a/DirectX11Project/DirectX11Project.vcxproj.filters
+++ b/DirectX11Project/DirectX11Project.vcxproj.filters
@@ -44,4 +44,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Effects.fx">
+      <Filter>Source Files</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
