--- a/DirectX11Project/DirectX11Project.vcxproj.filters
+++ b/DirectX11Project/DirectX11Project.vcxproj.filters
@@ -49,4 +49,9 @@
       <Filter>Source Files</Filter>
     </FxCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Texture.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
