--- a/DirectX11Project/DirectX11Project.vcxproj
+++ b/DirectX11Project/DirectX11Project.vcxproj
@@ -168,6 +168,7 @@
     <FxCompile Include="Effects.fx" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="skymap.dds" />
     <Image Include="Texture.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
